<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TimeTableActivity!</string>
    <string name="app_name">タイムテーブル</string>
    <string name="new_add">新規登録</string>
    <string name="list_show">時間割確認</string>
    <string name="title">タイトル</string>
    <string name="type">種類</string>
    <string name="department">学科</string>
    <string name="practical">実技</string>
    <string name="off_hours">プライベート</string>
    <string name="week">曜日</string>
    <string name="sunday">日曜日</string>
    <string name="monday">月曜日</string>
    <string name="tuesday">火曜日</string>
    <string name="wednesday">水曜日</string>
    <string name="thursday">木曜日</string>
    <string name="friday">金曜日</string>
    <string name="saturday">土曜日</string>
    <string name="add">登録</string>
    <string-array name="weeks">
        <item >日曜日</item>
        <item >月曜日</item>
        <item >火曜日</item>
        <item >水曜日</item>
        <item >木曜日</item>
        <item >金曜日</item>
        <item >土曜日</item>
    </string-array>
    <string-array name="tametable">
        <item >0時限目</item>
        <item >1時限目</item>
        <item >2時限目</item>
        <item >3時限目</item>
        <item >4時限目</item>
        <item >5時限目</item>
        <item >6時限目</item>
        <item >7時限目</item>
        <item >放課後</item>
    </string-array>
    <string-array name="types">
        <item >学科</item>
        <item >実技</item>
        <item >プライベート</item>
    </string-array>
        <string name="taimetable">時間割</string>
        <string name="choice_week">曜日を選択してください。</string>
        <string name="todo">Todo：</string>
        <string name="share">シェアする</string>
        <string name="title_label">タイトル：</string>
        <string name="edit">編集</string>
        <string name="delBtn">削除</string>
        <string name="types">予定の種類：</string>
        <string name="morning">0時限目</string>
        <string name="first">1時限目</string>
        <string name="second">2時限目</string>
        <string name="third">3時限目</string>
        <string name="fourth">4時限目</string>
        <string name="fifth">5時限目</string>
        <string name="sixth">6時限目</string>
        <string name="seventh">7時限目</string>
        <string name="after">放課後</string>
        <string name="zoom">拡大</string>
        <string name="name">名前</string>
        <string name="owner">所有者:</string>
        <string name="addVariety">追加</string>
        <string name="cancel">キャンセル</string>
        <string name="deleteButton">削除</string>
        <string name="mon">月</string>

        <string-array name="jigen">
            <item >0限目</item>
            <item >1限目</item>
            <item >2限目</item>
            <item >3限目</item>
            <item >4限目</item>
            <item >5限目</item>
            <item >6限目</item>
        </string-array>
    <string-array name="parent">
        <item>0時限目</item>
        <item>1時限目</item>
        <item>2時限目</item>
        <item>3時限目</item>
        <item>4時限目</item>
        <item>5時限目</item>
        <item>6時限目</item>
        <item>7時限目</item>
    </string-array>
    <string-array name="j0">
        <item >場所</item>
        <item >種類</item>
        <item >備考</item>
    </string-array>
    <string-array name="j1">
        <item >場所</item>
        <item >種類</item>
        <item >備考</item>
    </string-array>
    <string-array name="j2">
        <item >場所</item>
        <item >種類</item>
        <item >備考</item>
    </string-array>
    <string-array name="j3">
        <item >場所</item>
        <item >種類</item>
        <item >備考</item>
    </string-array>
    <string-array name="j4">
        <item >場所</item>
        <item >種類</item>
        <item >備考</item>
    </string-array>
    <string-array name="j5">
        <item >場所</item>
        <item >種類</item>
        <item >備考</item>
    </string-array>
    <string-array name="j6">
        <item >場所</item>
        <item >種類</item>
        <item >備考</item>
    </string-array>
    <string-array name="j7">
        <item >場所</item>
        <item >種類</item>
        <item >備考</item>
    </string-array>
        <string name="option">オプション</string>
        <string name="tue">火</string>
        <string name="wed">水</string>
        <string name="thu">木</string>
        <string name="fri">金</string>
        <string name="sat">土</string>
        <string name="sun">日</string>
</resources>