<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dayNowText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="現在日付" />

        <TextView
            android:id="@+id/currentWeekDayView"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.37" />

        <Button
            android:id="@+id/visibleButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="出る" />

        <Button
            android:id="@+id/invisibleButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="消える" />

        <Button
            android:id="@+id/dbClearButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DB洗浄" />

        <Button
            android:id="@+id/newButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp" >

        <Button
            android:id="@+id/monButton"
            android:layout_width="46dp"
            android:layout_height="80dp"
            android:gravity="top|center_horizontal"
            android:text="@string/mon" />

        <Button
            android:id="@+id/tueButton"
            android:layout_width="46dp"
            android:layout_height="80dp"
            android:text="@string/tue" />

        <Button
            android:id="@+id/wedButton"
            android:layout_width="46dp"
            android:layout_height="80dp"
            android:text="@string/wed" />

        <Button
            android:id="@+id/thuButton"
            android:layout_width="46dp"
            android:layout_height="80dp"
            android:text="@string/thu" />

        <Button
            android:id="@+id/friButton"
            android:layout_width="46dp"
            android:layout_height="80dp"
            android:text="@string/fri" />

        <Button
            android:id="@+id/satButton"
            android:layout_width="46dp"
            android:layout_height="80dp"
            android:text="@string/sat" />

        <Button
            android:id="@+id/sunButton"
            android:layout_width="46dp"
            android:layout_height="80dp"
            android:text="@string/sun" />
    </LinearLayout>

</LinearLayout>