<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.92" >


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >


                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title" />



                    <EditText
                        android:id="@+id/title"
                        android:layout_width="262dp"
                        android:layout_height="wrap_content" android:inputType="textMultiLine">

                        <requestFocus />
                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >



                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.09"
                        android:text="@string/todo" />





                    <EditText
                        android:id="@+id/todo"
                        android:layout_width="wrap_content"
                        android:layout_height="187dp"
                        android:layout_weight="0.89" android:inputType="textMultiLine"/>

                </LinearLayout>



                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >



                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.02"
                        android:text="@string/type" />

                    <Button
                        android:id="@+id/addVarietyButton"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.02"
                        android:text="@string/addVariety" />

                    <Spinner
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.12"
                        android:entries="@array/types" />

                </LinearLayout>






                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >


                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.05"
                        android:text="@string/week" />



                    <LinearLayout
                        android:id="@+id/linearLayout6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.01"
                        android:orientation="vertical" >






                        <Spinner
                            android:id="@+id/week"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.05" >





                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="63dp"
                        android:layout_height="fill_parent"
                        android:text="@string/taimetable" />






                    <Spinner
                        android:id="@+id/time_table"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>



<!--                 <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
-->

                <LinearLayout
                    android:id="@+id/linearLayout9"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >



                    <CheckBox
                        android:id="@+id/share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share" />

                </LinearLayout>






                <Button
                    android:id="@+id/edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>